--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ requires-python = ">=3.11"
 authors = [
     { name = "Your Name", email = "your.email@example.com" }
 ]
+dependencies = [
+    "pandas>=2.2.3",
+    "scikit-learn>=1.6.1",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
